@@ -35,7 +35,7 @@ passing the desired variable=value pair(s) on the command line.
 			directory where the binaries are installed.
 
 	DOCDIR		Defaults to $(PREFIX)/share/doc/$(OSH_VERSION).
-			This is the target directory for the [ACILNPR]*
+			This is the target directory for the [ACDILNPR]*
 			package documentation files.
 
 	EXPDIR		Defaults to $(DOCDIR)/examples.  This is the
@@ -150,6 +150,6 @@ OpenSolaris.
 	% gmake
 	# gmake INSTALL=/usr/bin/ginstall install install-doc install-exp
 
-Jeffrey Allen Neitzel						2012/06/02
+Jeffrey Allen Neitzel						2012/06/04
 
 @(#)$Id$
